[gd_scene load_steps=6 format=3 uid="uid://p3e05ywx53gl"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_h37bf"]
[ext_resource type="Script" path="res://components/CueTriggerModeOption/CueTriggerModeOption.gd" id="2_fn6rs"]
[ext_resource type="Texture2D" uid="uid://cxtdx7cj44nk" path="res://assets/icons/Touch.svg" id="3_07hox"]
[ext_resource type="Texture2D" uid="uid://txqtfrlvm3r7" path="res://assets/icons/ReturnFlipped.svg" id="4_vll8o"]
[ext_resource type="Texture2D" uid="uid://chjhgm2c7y36o" path="res://assets/icons/ArrowDownAlt.svg" id="5_7aga6"]

[node name="CueTriggerModeOption" type="PanelContainer"]
theme = ExtResource("1_h37bf")
script = ExtResource("2_fn6rs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Manual" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Manual: This cue will need to be activated manualy by the user."
toggle_mode = true
icon = ExtResource("3_07hox")

[node name="AfterLast" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "After Last: This cue will activate automatically after the last cue has finished, this includes the cues pre-wait time"
toggle_mode = true
icon = ExtResource("4_vll8o")

[node name="WithLast" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "With Last:  This cue will activate automatically at the same time as the last cue, this action can be delayed using the cues pre-wait time"
toggle_mode = true
icon = ExtResource("5_7aga6")

[connection signal="pressed" from="HBoxContainer/Manual" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="HBoxContainer/AfterLast" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="HBoxContainer/WithLast" to="." method="_on_button_pressed" binds= [2]]
